// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer Drawer renders 1`] = `
<DocumentFragment>
  <aside
    class="mdc-drawer"
  >
    <div
      class="mdc-drawer__header"
    >
      <div
        class="mdc-drawer__title"
      >
        Title
      </div>
      <div
        class="mdc-drawer__subtitle"
      >
        Subtitle
      </div>
    </div>
    <div
      class="mdc-drawer__content"
    />
  </aside>
</DocumentFragment>
`;

exports[`Drawer dismissible Drawer renders 1`] = `
<DocumentFragment>
  <aside
    class="mdc-drawer mdc-drawer--dismissible"
  >
    <div
      class="mdc-drawer__header"
    >
      <div
        class="mdc-drawer__title"
      >
        Title
      </div>
      <div
        class="mdc-drawer__subtitle"
      >
        Subtitle
      </div>
    </div>
    <div
      class="mdc-drawer__content"
    />
  </aside>
  <div
    class="mdc-drawer-app-content"
  >
    Test
  </div>
</DocumentFragment>
`;

exports[`Drawer modal Drawer renders 1`] = `
<DocumentFragment>
  <aside
    class="mdc-drawer mdc-drawer--modal"
  >
    <div
      class="mdc-drawer__header"
    >
      <div
        class="mdc-drawer__title"
      >
        Title
      </div>
      <div
        class="mdc-drawer__subtitle"
      >
        Subtitle
      </div>
    </div>
    <div
      class="mdc-drawer__content"
    />
  </aside>
  <div
    class="mdc-drawer-scrim"
  />
</DocumentFragment>
`;
